2007-11-28  Alex Schroeder  <aschroeder@localhost>

	* modules/strange-spam.pl (StrangeNewBannedContent): Apply test to
	page name as well.

2007-11-22  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GetInterLink): Enclose the ":" in a separate span.

2007-11-18  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NamespacesInitVariables): Always set
	$NamespaceRoot because it will be used below when redirecting. Not
	setting it will cause redirection to the Main namespace to produce
	a wrong edit link to the source page.

2007-11-15  Alex Schroeder  <alex@gnu.org>

	* modules/strange-spam.pl (StrangeNewBannedContent): Make sure
	newlines are stripped from the match.

	* modules/despam.pl (DespamBannedContent): No longer use
	case-insensitive matches to mimic changes in strange-spam.pl.
	Make sure newlines are stripped from the match.

2007-11-14  Alex Schroeder  <alex@gnu.org>

	* modules/google-search.pl ($GoogleSearchExclusive): New option.
	(GoogleSearchInit): Allow $GoogleSearchDomain to be set in the
	config file.

	* modules/strange-spam.pl (StrangeNewBannedContent): No longer use
	case-insensitive matches.

	* modules/toc.pl (TocHeadings): No idea why this solves the
	problem with disappearing TOC. TocProcessing is allowed one more
	level of recursion.

	* wiki.pl (GetRcHtml): Wrap the entire list in a form block so
	that the rollback buttons actually have an effect.

2007-11-13  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NamespaceRcLines): Use StripRollbacks.

	* wiki.pl (GetRcLines, StripRollbacks): Move the rollback
	stripping into a separate sub.

	* t/test.pl (xpath_do): Don't be confused by the new xmlns
	attribute in the html element.

2007-11-11  Alex Schroeder  <aschroeder@localhost>

	* modules/questionasker.pl (NewQuestionaskerDoPost): Pass
	aftertext through.

2007-11-07  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NewNamespaceBrowsePage): Fix test from
	$WikiLinks to $FreeLinks.
